--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "homepage": "https://aus36.github.io/did-wallet-pwa/",
   "private": true,
   "dependencies": {
+    "@scure/bip39": "^1.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.8.2",
+    "human-crypto-keys": "^0.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
