--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "homepage": "https://aus36.github.io/did-wallet-pwa/",
   "private": true,
   "dependencies": {
+    "@noble/ed25519": "^2.0.0",
     "@scure/bip39": "^1.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.8.2",
-    "human-crypto-keys": "^0.1.4",
+    "did-jwt": "^7.2.5",
+    "did-jwt-vc": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
