--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "did-wallet-pwa",
   "version": "0.1.0",
-  "homepage": "https://aus36.github.io/did-wallet-pwa/",
+  "homepage": "https://aus36.github.io/did-root-wallet/",
   "private": true,
   "dependencies": {
     "@noble/ed25519": "^2.0.0",
@@ -12,6 +12,7 @@
     "antd": "^5.8.2",
     "did-jwt": "^7.2.5",
     "did-jwt-vc": "^3.2.5",
+    "multiformats": "^12.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
