--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,15 +1,15 @@
 {
-    "short_name": "DID-PWA",
-    "name": "DID-Wallet-PWA",
+    "short_name": "Root",
+    "name": "Root Wallet",
     "icons": [
         {
-            "src": "./logo192.png",
-            "sizes": "192x192",
+            "src": "./logo50.png",
+            "sizes": "50x50",
             "type": "image/png"
         },
         {
-            "src": "./logo512.png",
-            "sizes": "512x512",
+            "src": "./logo100.png",
+            "sizes": "100x100",
             "type": "image/png"
         },
         {
